ec2/ubuntu/ubuntu/security_groups.tf
# Purpose: Create security group for EC2 instance

resource "aws_security_group" "example" {
  # name_prefix = "example"
  name = "example"
  description = "Example security group"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "example"
  }
}
